--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" name="viewport" content="initial-scale=1, width=device-width" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/necochi.ico" />
     <title>Task management app</title>
 
     <!-- Robotoフォント読み込み -->
